open API yaml file extended
