# Backend/myapp/models.py
@@ -1,0 +1,7 @@
+from mongoengine import *
+
+class UseCase(DynamicDocument):
+    url = URLField(max_length=100)
+    filter_tags = StringField()
+    # content = DictField()
+    # images = ListField(DictField())
